temp/unpackaged/objects/Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Available_on_Weekends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available on Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Study__c</fullName>
        <label>Hours of Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one hour</fullName>
                </value>
                <value>
                    <fullName>Two hour</fullName>
                </value>
                <value>
                    <fullName>Three hour</fullName>
                </value>
                <value>
                    <fullName>Four Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parents_name__c</fullName>
        <label>Parents name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <label>Registration</label>
        <referenceTo>Registration_form__c</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Qualifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Qualification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Studentname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>